React Migration Added gh-pages dependency Added npm scripts for deploying website

--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "robert-mitola-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://robert-mitola.github.io/robert-mitola.github.com",
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "gh-pages": "^2.0.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.15.0"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
